A引言和A-01校对完成

--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -84,31 +84,38 @@
 把概念和规律写成公式后，显得特别简单、明确，而且便于运
 用它们来进行分析、推理、论证．物理规律还常常用函数图象
 来表示．在初中学过的给晶体和非晶体加热时它们在熔解前
-后温度随时间而变化的图线（图1），就是一个例子．从图
-中很容易看出晶体和非晶体在熔解时一表现出不同的特点，晶
+后温度随时间而变化的图线（图 \ref{fig_A_0-1}），就是一个例子．从图
+中很容易看出晶体和非晶体在熔解时表现出不同的特点，晶
 体在熔解时虽然继续受热但温度并不升高，非晶体就没有这
 个特点．图象的突出优点是它很直观，而且比较容易直接根
 据实验数据画出来．
 
 \begin{figure}[htp]\centering 
-\begin{tikzpicture}[>=stealth, thick]
-\draw [<->](0,3)--(0,0)--(4,0);
-\node at (.5,3) {温度};
-\node at (3.75,-.25) {时间};
-\draw (.5,.5)--(1.5,1.5)--(2.5,1.5)--(3.5,2.5);
-\node at (2,-.75) {甲：晶体};
-
-\end{tikzpicture}\qquad\qquad 
-\begin{tikzpicture}[>=stealth, thick]
-\draw [<->](0,3)--(0,0)--(4,0);
-\node at (.5,3) {温度};
-\node at (3.75,-.25) {时间};
-\draw (.5,.5) [bend left =15] to (3.5,2.5);
-\node at (2,-.75) {乙：非晶体};
-
-\end{tikzpicture}
+\begin{subfigure}{0.46\linewidth}
+	\centering
+	\begin{tikzpicture}[>=stealth, thick]
+		\draw [<->](0,3)--(0,0)--(4,0);
+		\node at (.5,3) {温度};
+		\node at (3.75,-.25) {时间};
+		\draw (.5,.5)--(1.5,1.5)--(2.5,1.5)--(3.5,2.5);
+		%\node at (2,-.75) {甲：晶体};
+	\end{tikzpicture}
+	\caption{晶体}\label{fig_A_0-1a}
+\end{subfigure}
+\hfil
+\begin{subfigure}{0.46\linewidth}
+	\centering
+	\begin{tikzpicture}[>=stealth, thick]
+		\draw [<->](0,3)--(0,0)--(4,0);
+		\node at (.5,3) {温度};
+		\node at (3.75,-.25) {时间};
+		\draw (.5,.5) [bend left =15] to (3.5,2.5);
+		%\node at (2,-.75) {乙：非晶体};
+	\end{tikzpicture}
+	\caption{非晶体}\label{fig_A_0-1b}
+\end{subfigure}
 \caption{物体受热时温度随时间而变化的图线
-}
+}\label{fig_A_0-1}
 \end{figure}
 
     数学知识在物理学中的应用是十分重要的，但是我们却
@@ -148,7 +155,7 @@
 
 \subsection*{做好练习}
 
-做练习是学好物理知识的不可少的环节．
+做练习是学好物理知识的必不可少的环节．
 认真做好练习，可以加深对所学知识的理解，发现自己知识中
 的薄弱环节而去有意识地加强它，逐步培养自己的分析解决
 问题的能力，逐步树立解决实际问题的自信心．
@@ -189,8 +196,8 @@
 类型，机械模仿，都不能达到做好练习的目的．为了掌握知
 识，需要做一定数量的练习，但是，如果误以为学物理就是做
 题，既不复习老师讲课的内容，也不阅读教材，就盲目地去找
-过多的难题来做，同样不能达到做好练习的目的，这些错误
-办法无助于我们学好本领，增长才干，一定要坚决摒弃．
+过多的难题来做，同样不能达到做好练习的目的．
+这些错误办法无助于我们学好本领，增长才干，一定要坚决摒弃．
 
 
 
