--- a/fig/A/1-30.tex
+++ b/fig/A/1-30.tex
@@ -19,7 +19,7 @@
   \draw[fill=black!40](2,-2) rectangle (3,-1.5);
   \draw (0,1.8-.25) arc(270:325:.25) node [below]{$\theta$};
   \draw (2.5,0-.25) arc(270:325:.25) node [below]{$\theta$};
-  \draw[double] (0,1.8)node [above right]{$N$}--(2.5,0)node [right]{$O$}--(0,0);
+  \draw[double] (0,1.8)node [above right]{$N$}--(2.5,0)node [above right]{$O$}--(0,0);
   \draw[very thick,->](2.5,0)--(2.5*.5, 0)node [above]{$F_2$};
   \node at (.2,-.2) {$M$};
   \end{tikzpicture}
