--- a/fig/A/1-31.tex
+++ b/fig/A/1-31.tex
@@ -31,7 +31,8 @@
   \draw(0.48,-0.2)--(-2.4,1.0)(0,0)--(0,-1)(-2.4,1.0)--(-3.45,0.3);
   \draw[thick,->](0,0)--(1.2,-0.5)node[midway,above]{$F_1$};
   \draw[thick,->](0,0)--(-1.2,-0)node[above]{$F_2$};
-  \draw[thick,->](0,0)--(0,-0.5)node[above right]{$G$};
+  \draw[thick,->](0,0)--(0,-0.5)node[above right]{$F$};
+  \node at (0,0) [above]{$O$};
   \draw[thin,densely dashed](1.2,-0.5)--(0,-0.5)--(-1.2,0);
   \fill[left color=darkgray,right color=darkgray,middle color=white](-0.2,-1)rectangle(0.2,-1.5);
   \draw(-3.6,0)rectangle(-3.3,0.3)(-3.3,0.0)rectangle(-3.1,0.2);
