--- a/fig/A/1-1.tex
+++ b/fig/A/1-1.tex
@@ -16,6 +16,7 @@
   \draw [fill=lightgray](.5,0) circle (.1);
   \draw [fill=lightgray](1.5,0) circle (.1);
   \draw [->, thick](0,0.5)--(-2,0.5);
+  \draw [dashed, very thin](3,0.5)--(-2.5,0.5);
   \foreach \i in {-.4,-.8,-1.2,-1.6,-2}
   {
       \draw[thin] (\i,0.6)--(\i,.5);
