--- a/fig/A/1-10.tex
+++ b/fig/A/1-10.tex
@@ -24,8 +24,10 @@
     \fill[left color=gray,right color=gray,middle color=white]
     (\x+0.07,0.5)rectangle(\x-0.07,0.7);
     \fill[left color=gray,right color=gray,middle color=white](\x-0.05,0.1)rectangle(\x+0.05,\y);
-    \fill[cyan!50!lightgray!20](\x-0.02,\y)rectangle(\x+0.02,\y+0.4);
+    \fill[cyan!90](\x-0.02,\y)rectangle(\x+0.02,\y+0.4);
   }
+  \node at (2.05,1.3) {M};
+  \node at (-2,1.7) {N};
   \draw[thin,postaction={decorate},decoration={markings,mark=at position .57
   with {\arrow{stealth}}}]([shift=(150:0.3)]-1.8,1.7)arc(150:30:0.3);
   \draw[thin,postaction={decorate},decoration={markings,mark=at position .57
