--- a/fig/A/1-24.tex
+++ b/fig/A/1-24.tex
@@ -11,7 +11,7 @@
 \begin{tikzpicture}[>=latex, thick,scale=1]
   % \useasboundingbox(-1,-0.75)rectangle(3.7,1.4);
   \draw [->](0,0)node[below] {$O$}--node[below] {$F_1$} (4,0)node[below] {$A$} ;
-  \draw [->>](0,0)--node[above] {$F_2$}(1,2) node[above] {$B$};
+  \draw [->>](0,0)--node[left] {$F_2$}(1,2) node[above] {$B$};
   \draw [dashed](5,2)--(1,2);
   \draw [dashed](4,0)--(5,2)node[above] {$C$};
   \draw [->>>](0,0)--node[above] {$F$}(5,2) ;
