--- a/physics.tex
+++ b/physics.tex
@@ -17,15 +17,16 @@
 	\author{\Large 张同恂 \and \Large 方玉珍 \and \Large 马淑美}
 	\date{\Large 1983年11月\\~\\~\\ \includegraphics[width=85mm]{fig/A/cover.pdf} }
 	
-	\maketitle %封面
-	\tableofcontents %目录
-	\frontmatter
-	\include{1/A/preface} %引言
-	\mainmatter
+	%\maketitle %封面
+	%\tableofcontents %目录
+	%\frontmatter
+	%\include{1/A/preface} %引言
+	%\mainmatter
 	
 	
 	%正文内容
-	\include{1/A/01}
+	%\include{1/A/01}
+	\include{1/A/02}
 	
 	
 \end{document}
