--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -1,4 +1,4 @@
-\chapter{曲线运动}
+\chapter{曲线运动}\label{chapter-curvilinear-motion}
     到现在为止，我们只讨论了与物体的直线运动有关的运
 动学和动力学问题，除直线运动外，我们还常常遇到曲线运
 动．抛出的石子，是沿着一条曲线落地的（图4.1）．各种车
