--- a/fig/A/2-15.tex
+++ b/fig/A/2-15.tex
@@ -25,6 +25,6 @@
   {
      \draw [dashed] (\z,0)--(\z, \z/4*5)--(0, \z/4*5);
   }
-  \node at (3,-1){$v_0=0,\quad a=2.5{\rm m/s}^2$};
+  %\node at (3,-1){$v_0=0,\quad a=2.5{\rm m/s}^2$};
 \end{tikzpicture}
 \end{document}
