--- a/fig/A/2-16.tex
+++ b/fig/A/2-16.tex
@@ -25,6 +25,6 @@
   {
      \draw [dashed] (\z,0)--(\z, 1+6/8*\z)--(0, 1+6/8*\z);
   }
-  \node at (3,-1){$v_0=2{\rm m/s},\quad a=1.5{\rm m/s}^2$};
+  %\node at (3,-1){$v_0=2{\rm m/s},\quad a=1.5{\rm m/s}^2$};
 \end{tikzpicture}
 \end{document}
